--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_container"
-        android:name="com.example.eecs4443_lab03.ContactFragment"  android:layout_width="match_parent"
+        android:name="com.example.eecs4443_lab03.ContactFragment"
+        android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
