--- a/app/src/main/res/layout/fragment_contact_details.xml
+++ b/app/src/main/res/layout/fragment_contact_details.xml
@@ -153,5 +153,14 @@
             android:layout_marginTop="20dp"
             android:text="@string/contact_edit_button_text" />
 
+        <!-- Delete button -->
+        <Button
+            android:id="@+id/contact_button_delete"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:backgroundTint="@color/red"
+            android:text="@string/delete_contact" />
+
     </LinearLayout>
 </ScrollView>
