--- a/app/src/main/res/layout/fragment_contact_add.xml
+++ b/app/src/main/res/layout/fragment_contact_add.xml
@@ -25,13 +25,26 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/contact_name" />
+            android:text="@string/required_name" />
 
         <EditText
             android:id="@+id/add_edit_text_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPersonName" />
+
+        <!-- Phone -->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="@string/required_phone_number" />
+
+        <EditText
+            android:id="@+id/add_edit_text_phone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="phone" />
 
         <!-- Birthday -->
         <TextView
@@ -48,19 +61,6 @@
             android:focusable="false"
             android:clickable="true"
             android:inputType="none" />
-
-        <!-- Phone -->
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:text="@string/contact_phone_number" />
-
-        <EditText
-            android:id="@+id/add_edit_text_phone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="phone" />
 
         <!-- Description -->
         <TextView
